# gpt-shell

./: .gitignore  .gitmodules  .ollama.conf  .openai.conf  LICENSE  README.md  architecture.dio  pyproject.toml  requirements.txt
gptshell/: __init__.py  __main__.py  app.py  audio.py  chat.py  config.py  embedor.py  styles.py  utils.py
